--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "test": "vitest"
   },
   "devDependencies": {
+    "@types/node": "^20.12.7",
     "@vitest/coverage-v8": "^1.4.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.4.0"
