--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "@nestjs/platform-express": "^10.3.8",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
-  }
+  },
+  "packageManager": "pnpm@9.0.6"
 }
