--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.8",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.8",
     "@nestjs/platform-express": "^10.3.8",
     "reflect-metadata": "^0.2.2",
