chore: add docker support

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -5,3 +5,9 @@ services:
       context: ../
       dockerfile: ./docker/Dockerfile
     image: backend
+    environment:
+      - API_HTTP_PORT=8080
+      - API_HTTP_HOST=0.0.0.0
+      - API_HTTP_SCHEME=http
+    ports:
+      - "8080:8080"
