chore: add testcontainers package

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20.12.11",
     "@vitest/coverage-v8": "^1.6.0",
     "chokidar-cli": "^3.0.0",
+    "testcontainers": "^10.9.0",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
