chore: add e2e config file + package.json script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node ./build/main.js",
     "start:development": "concurrently -n API,BUILD \"pnpm start:watch\" \"pnpm build:watch\"",
     "start:watch": "chokidar --silent './build/**/*.js' -c 'kill-port 8080 && pnpm start'",
-    "test": "vitest"
+    "test": "vitest",
+    "test:e2e": "vitest run -c vitest.config.e2e.ts"
   },
   "devDependencies": {
     "@swc/cli": "^0.3.12",
