--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@swc/cli": "^0.3.12",
     "@swc/core": "^1.6.3",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.14.7",
     "@vitest/coverage-v8": "^1.6.0",
     "chokidar-cli": "^3.0.0",
@@ -26,6 +28,7 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.9",
     "@nestjs/platform-express": "^10.3.9",
+    "cookie-parser": "^1.4.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
