--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "paths": {
-      "@identity-and-access/*": ["./src/identity-and-access/*"]
+      "@identity-and-access/*": ["./src/identity-and-access/*"],
+      "@shared-kernel/*": ["./src/shared-kernel/*"]
     },
     "target": "ESNext"
   }
