--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@swc/core": "^1.7.9",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.14",
     "@vitest/coverage-v8": "^1.6.0",
     "chokidar-cli": "^3.0.0",
@@ -29,6 +30,7 @@
     "@nestjs/core": "^10.3.10",
     "@nestjs/platform-express": "^10.3.10",
     "cookie-parser": "^1.4.6",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
