--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,3 +41,8 @@ jobs:
 
       - name: Run E2E tests
         run: pnpm test:e2e
+        env:
+          API_HTTP_HOST: "localhost"
+          API_HTTP_PORT: "8080"
+          API_HTTP_SCHEME: "http"
+          OAUTH_GOOGLE_REDIRECT_URI: "http://localhost:8080/identity-and-access/oauth/google/callback"
