--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,7 +2,6 @@ name: Continuous Integration
 on: push
 
 jobs:
-  # Based on https://github.com/pnpm/action-setup
   specs:
     runs-on: ubuntu-latest
 
@@ -40,9 +39,9 @@ jobs:
         run: pnpm test
 
       - name: Run E2E tests
-        run: pnpm test:e2e
-        env:
-          API_HTTP_HOST: "localhost"
-          API_HTTP_PORT: "8080"
-          API_HTTP_SCHEME: "http"
-          OAUTH_GOOGLE_REDIRECT_URI: "http://localhost:8080/identity-and-access/oauth/google/callback"
+        run: |
+          echo "API_HTTP_HOST=localhost" > .env
+          echo "API_HTTP_PORT=8080" >> .env
+          echo "API_HTTP_SCHEME=http" >> .env
+          echo "OAUTH_GOOGLE_REDIRECT_URI=http://localhost:8080/identity-and-access/oauth/google/callback" >> .env
+          pnpm test:e2e
