test: add Wait.forHttp strategy when starting e2e environment

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
       context: ../
       dockerfile: ./docker/Dockerfile
     image: backend
+    container_name: api-1
     env_file:
       - ../.env
     ports:
