--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -11,10 +11,10 @@ COPY .nvmrc \
     ./
 # Optimize the release image by installing only production dependencies
 # This will allow us to discard every artifact from the `pnpm install`
-RUN npm install -g pnpm
-RUN pnpm install --frozen-lockfile --prod
-COPY node_modules ./production_node_modules
-RUN pnpm install --frozen-lockfile
+RUN npm install -g pnpm && \
+    pnpm install --frozen-lockfile --prod && \
+    cp -R node_modules production_node_modules && \
+    pnpm install --frozen-lockfile
 COPY src ./src
 RUN pnpm build
 
