feat(iam): sign-in-with-credentials + RFC9457 errors

--- a/.swcrc
+++ b/.swcrc
@@ -7,6 +7,7 @@
       "syntax": "typescript"
     },
     "paths": {
+      "@core/*": ["./src/core/*"],
       "@identity-and-access/*": ["./src/identity-and-access/*"],
       "@shared-kernel/*": ["./src/shared-kernel/*"]
     },
