--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:development": "concurrently -n API,BUILD \"pnpm start:watch\" \"pnpm build:watch\"",
     "start:watch": "chokidar --silent './build/**/*.js' -c 'kill-port 8080 && pnpm start'",
     "test": "vitest",
-    "test:e2e": "vitest run -c vitest.config.e2e.ts --isolate=false"
+    "test:e2e": "vitest run -c vitest.config.e2e.ts"
   },
   "devDependencies": {
     "@swc/cli": "^0.3.14",
@@ -16,11 +16,13 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.14",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.6.0",
     "chokidar-cli": "^3.0.0",
     "concurrently": "^8.2.2",
     "kill-port": "^2.0.1",
-    "testcontainers": "^10.11.0",
+    "supertest": "^7.0.0",
+    "unplugin-swc": "^1.5.1",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
   },
@@ -29,6 +31,8 @@
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.10",
     "@nestjs/platform-express": "^10.3.10",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
