--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,10 +39,5 @@ jobs:
       - name: Run unitary tests
         run: pnpm test
 
-      # TODO: Fix E2E tests in CI
-      # . missing .env file
-      # . testcontainers container not reachable (Error: URL /health-check not accessible after 60000ms)
-      #
-      # Disabled for now
-      # - name: Run E2E tests
-      #   run: pnpm test:e2e
+      - name: Run E2E tests
+        run: pnpm test:e2e
