feat(shared-kernel): add DatabaseModule with Drizzle

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -9,3 +9,23 @@ services:
       - ../.env
     ports:
       - "8080:8080"
+
+  database:
+    image: postgres:alpine
+    healthcheck:
+      test: ["CMD", "pg_isready", "-q", "-U", "admin", "-d", "database"]
+      interval: 10s
+      timeout: 60s
+      retries: 3
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: database
+    ports:
+      - "5432:5432"
+    volumes:
+      - database_data:/var/lib/postgresql/data
+
+volumes:
+  database_data:
+    driver: local
