--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,11 @@ API_HTTP_SCHEME="http"
 # ======================
 #  Identity And Access  
 # ======================
-OAUTH_GOOGLE_CLIENT_ID="YOUR_GOOGLE_CLIENT_ID"
-OAUTH_GOOGLE_CLIENT_SECRET="YOUR_GOOGLE_CLIENT_SECRET"
-OAUTH_GOOGLE_REDIRECT_URI="http://localhost:8080/identity-and-access/oauth/google/callback"
+OAUTH_GOOGLE_CLIENT_ID="<GOOGLE_CLIENT_ID>"
+OAUTH_GOOGLE_CLIENT_SECRET="<GOOGLE_CLIENT_SECRET>"
+OAUTH_GOOGLE_REDIRECT_URI="http://localhost:8080/oauth/google/callback"
+
+# ======================
+#     Shared Kernel     
+# ======================
+DATABASE_CONNECTION_STRING="postgresql://admin:password@localhost:5432/database"
