--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.14",
+    "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.6.0",
     "chokidar-cli": "^3.0.0",
     "concurrently": "^8.2.2",
+    "drizzle-kit": "^0.24.2",
     "kill-port": "^2.0.1",
     "supertest": "^7.0.0",
     "unplugin-swc": "^1.5.1",
@@ -34,7 +36,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "drizzle-orm": "^0.33.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
