--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "drizzle-kit": "^0.24.2",
     "kill-port": "^2.0.1",
     "supertest": "^7.0.0",
+    "testcontainers": "^10.13.1",
     "unplugin-swc": "^1.5.1",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
