ci: fix missing .env while running e2e specs

--- a/.env.example
+++ b/.env.example
@@ -3,13 +3,6 @@ API_HTTP_PORT="8080"
 API_HTTP_SCHEME="http"
 
 # ======================
-#  Identity And Access  
-# ======================
-OAUTH_GOOGLE_CLIENT_ID="<GOOGLE_CLIENT_ID>"
-OAUTH_GOOGLE_CLIENT_SECRET="<GOOGLE_CLIENT_SECRET>"
-OAUTH_GOOGLE_REDIRECT_URI="http://localhost:8080/oauth/google/callback"
-
-# ======================
 #     Shared Kernel     
 # ======================
-DATABASE_CONNECTION_STRING="postgresql://admin:password@localhost:5432/database"
+DATABASE_URL="postgresql://admin:password@localhost:5432/database"
