--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@swc/cli": "^0.3.14",
     "@swc/core": "^1.7.26",
+    "@testcontainers/postgresql": "^10.13.1",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
