--- a/package.json
+++ b/package.json
@@ -10,25 +10,25 @@
     "test:e2e": "vitest run -c vitest.config.e2e.ts"
   },
   "devDependencies": {
-    "@swc/cli": "^0.3.14",
+    "@swc/cli": "^0.4.1-nightly.20240914",
     "@swc/core": "^1.7.26",
-    "@testcontainers/postgresql": "^10.13.1",
+    "@testcontainers/postgresql": "^10.13.2",
     "@types/cookie-parser": "^1.4.7",
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20.16.10",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/coverage-v8": "^2.1.2",
     "chokidar-cli": "^3.0.0",
-    "concurrently": "^8.2.2",
-    "drizzle-kit": "^0.24.2",
+    "concurrently": "^9.0.1",
+    "drizzle-kit": "^0.25.0",
     "kill-port": "^2.0.1",
     "supertest": "^7.0.0",
-    "testcontainers": "^10.13.1",
+    "testcontainers": "^10.13.2",
     "unplugin-swc": "^1.5.1",
-    "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "^1.6.0"
+    "vite-tsconfig-paths": "^5.0.1",
+    "vitest": "^2.1.2"
   },
   "dependencies": {
     "@nestjs/common": "^10.4.4",
@@ -38,11 +38,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
-    "drizzle-orm": "^0.33.0",
+    "drizzle-orm": "^0.34.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
-  "packageManager": "pnpm@9.11.0"
+  "packageManager": "pnpm@9.12.1"
 }
