--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "build": "swc ./src --ignore **/*.spec.ts --out-dir ./build --strip-leading-paths",
     "build:watch": "pnpm build --watch",
+    "dev": "concurrently -n API,BUILD \"pnpm start:watch\" \"pnpm build:watch\"",
     "start": "node ./build/main.js",
-    "start:development": "concurrently -n API,BUILD \"pnpm start:watch\" \"pnpm build:watch\"",
     "start:watch": "chokidar --silent './build/**/*.js' -c 'kill-port 8080 && pnpm start'",
     "test": "vitest",
     "test:e2e": "vitest run -c vitest.config.e2e.ts"
