--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.16.10",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
@@ -40,6 +41,7 @@
     "cookie-parser": "^1.4.6",
     "drizzle-orm": "^0.34.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.5.0",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
