--- a/package.json
+++ b/package.json
@@ -10,39 +10,39 @@
     "test:e2e": "vitest run -c vitest.config.e2e.ts"
   },
   "devDependencies": {
-    "@swc/cli": "^0.4.1-nightly.20240914",
-    "@swc/core": "^1.7.26",
-    "@testcontainers/postgresql": "^10.13.2",
+    "@swc/cli": "0.4.1-nightly.20240914",
+    "@swc/core": "^1.9.1",
+    "@testcontainers/postgresql": "^10.14.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.16.10",
+    "@types/node": "^20.17.6",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
-    "@vitest/coverage-v8": "^2.1.2",
+    "@vitest/coverage-v8": "^2.1.4",
     "chokidar-cli": "^3.0.0",
-    "concurrently": "^9.0.1",
+    "concurrently": "^9.1.0",
     "drizzle-kit": "^0.25.0",
     "kill-port": "^2.0.1",
     "supertest": "^7.0.0",
-    "testcontainers": "^10.13.2",
+    "testcontainers": "^10.14.0",
     "unplugin-swc": "^1.5.1",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "^2.1.2"
+    "vite-tsconfig-paths": "^5.1.0",
+    "vitest": "^2.1.4"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.4",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.4.4",
-    "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/common": "^10.4.7",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.7",
+    "@nestjs/platform-express": "^10.4.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "cookie-parser": "^1.4.6",
-    "drizzle-orm": "^0.34.0",
+    "cookie-parser": "^1.4.7",
+    "drizzle-orm": "^0.34.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
-    "pg": "^8.13.0",
+    "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
