--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
       API_HTTP_HOST: "0.0.0.0"
       API_HTTP_PORT: "8080"
       API_HTTP_SCHEME: "http"
-      DATABASE_URL: "postgres://admin:admin@database:5432/database"
+      DATABASE_URL: "postgres://admin:password@database:5432/database"
     ports:
       - "8080:8080"
 
@@ -22,7 +22,7 @@ services:
       retries: 3
     environment:
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
+      POSTGRES_PASSWORD: password
       POSTGRES_DB: database
     ports:
       - "5432:5432"
