--- a/package.json
+++ b/package.json
@@ -10,20 +10,20 @@
     "test:e2e": "vitest run -c vitest.config.e2e.ts"
   },
   "devDependencies": {
-    "@swc/cli": "0.4.1-nightly.20240914",
+    "@swc/cli": "^0.5.0",
     "@swc/core": "^1.9.1",
     "@testcontainers/postgresql": "^10.14.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.17.6",
+    "@types/node": "^22.9.0",
     "@types/pg": "^8.11.10",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^2.1.4",
     "chokidar-cli": "^3.0.0",
     "concurrently": "^9.1.0",
-    "drizzle-kit": "^0.25.0",
+    "drizzle-kit": "^0.28.0",
     "kill-port": "^2.0.1",
     "supertest": "^7.0.0",
     "testcontainers": "^10.14.0",
@@ -39,7 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
-    "drizzle-orm": "^0.34.1",
+    "drizzle-orm": "^0.36.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
     "pg": "^8.13.1",
