--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "vitest": "^2.1.4"
   },
   "dependencies": {
+    "@nestjs-cls/transactional": "^2.4.2",
+    "@nestjs-cls/transactional-adapter-drizzle-orm": "^1.1.1",
     "@nestjs/common": "^10.4.7",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.7",
@@ -42,6 +44,7 @@
     "drizzle-orm": "^0.36.1",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
+    "nestjs-cls": "^4.4.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
