--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/common": "^10.4.7",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.7",
+    "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/platform-express": "^10.4.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
