feat: showcase how to trigger a use-case through domain-events

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "@identity-and-access/*": ["./src/identity-and-access/*"],
       "@shared-kernel/*": ["./src/shared-kernel/*"]
     },
+    "strictNullChecks": true,
     "target": "ESNext"
   }
 }
