--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@swc/cli": "^0.5.1",
     "@swc/core": "^1.9.3",
     "@testcontainers/postgresql": "^10.15.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
@@ -37,6 +38,7 @@
     "@nestjs/core": "^10.4.9",
     "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/platform-express": "^10.4.9",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
