--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/core": "^10.4.9",
     "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/platform-express": "^10.4.9",
+    "@nestjs/throttler": "^6.2.1",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
