--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "drizzle-orm": "^0.36.4",
+    "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
     "nestjs-cls": "^4.4.1",
