--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build:watch": "pnpm build --watch",
     "dev": "concurrently -n API,BUILD \"pnpm start:watch\" \"pnpm build:watch\"",
     "start": "node ./build/main.js",
-    "start:watch": "chokidar --silent './build/**/*.js' -c 'kill-port 8080 && pnpm start'",
+    "start:watch": "chokidar --silent './build/**/*.js' '.env' -c 'kill-port 8080 && pnpm start'",
     "test": "vitest",
     "test:e2e": "vitest run -c vitest.config.e2e.ts"
   },
