--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "nestjs-cls": "^4.4.1",
     "pg": "^8.13.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.8"
   },
   "packageManager": "pnpm@9.12.1"
 }
