--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,5 +39,12 @@ jobs:
       - name: Run unitary tests
         run: pnpm test
 
+      - name: Set environment variables for E2E tests
+        run: |
+          echo "API_HTTP_HOST=127.0.0.1" >> $GITHUB_ENV
+          echo "API_HTTP_PORT=8080" >> $GITHUB_ENV
+          echo "API_HTTP_SCHEME=http" >> $GITHUB_ENV
+          echo "DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres" >> $GITHUB_ENV
+
       - name: Run E2E tests
         run: pnpm test:e2e
