--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-API_HTTP_HOST="0.0.0.0"
+API_BASE_URL="http://127.0.0.1:8080"
+API_HTTP_HOST="127.0.0.1"
 API_HTTP_PORT="8080"
 API_HTTP_SCHEME="http"
 
