--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       dockerfile: ./docker/Dockerfile
     image: backend
     environment:
+      API_BASE_URL: "http://localhost:8080"
       API_HTTP_HOST: "0.0.0.0"
       API_HTTP_PORT: "8080"
       API_HTTP_SCHEME: "http"
