--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,10 @@
       "@identity-and-access/*": ["./src/identity-and-access/*"],
       "@shared-kernel/*": ["./src/shared-kernel/*"]
     },
+    "skipLibCheck": true,
     "strictNullChecks": true,
     "target": "ESNext"
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "build"]
 }
