feat(iam): replace hardcoded JWT secret with configurable secret

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ API_HTTP_SCHEME="http"
 #     Shared Kernel     
 # ======================
 DATABASE_URL="postgresql://admin:password@localhost:5432/database"
+JWT_SECRET="secret"
